# cli-todo-app

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
app/: editor.py  main.py  tasks.py
cli_todo_app/: editor.py  main.py  response.py  tasks.py  vacant_ids.py
data/: todos.json
