[project]
name = "cli-todo-app"
description = "Simple command-line tool for managing tasks"
version = "1.0.0"
authors = [
    {name = "artenderrr"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "click"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
todos = "cli_todo_app.main:cli"

[tool.setuptools.packages.find]
include = ["cli_todo_app"]